# burrito-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.sqlx/: query-02ca7603b08416d4f76363b8ee7d0450b5533eb436d771cf98364ed932ecfb5d.json  query-18adbf0527f76d9dc69763c7577f78048c2a68c724bd6fa616057e9f5e45292e.json  query-22d908ab5af902cbb61601140341cf2ea9fbc67a88fb1308f6b42ae2bb09f08e.json  query-57a7526b76abb4f91a1d8278981b8ae7df9612b6d45e5fe7f06cb6c1c602b228.json  query-5ebfe6b6b9ecb8289a93ffdea4abd25bf06febab0d1d5d949ff0ef3954523b68.json  query-62345f0a62a10c3a0e5817c4b847f1ccd974363612eef357fd8f538e9fd9ded2.json  query-70553f6794005fe09b6b242565dcef7bfd5464d92ceb8da64b4612012a092a07.json  query-70b3cb335fae2638d6b31f672c48aa56362174b8379be2a7057b72757b27d185.json  query-77b6bd82d72069d42b510f15a24505cf78a0d436bdb34883209b0f103391f2ea.json  query-7fc62be9461cae940974d84a35414c34ad0bcecae2ac9086f9692b1cc3cf3244.json  query-84463d2907d8e4f3ee608f211f77cbf22f958572c691807ce910c2cc638fe86c.json  query-86cd453ec85022c8ef78da1d79178715763da4af91af830a7d94c55d544d35cf.json  query-a8c85c97d3bd555a9c74b9c61b10b59781c3807e439babc9b20c8971b4a877ba.json  query-ad336b5e28273d7178f6f3667dbe690bb4844b7041d581c8a2503a7438cf6761.json  query-b98e048aa1d58a7983d61f39100bfc9a185641b7900dfd46d3e8ec8592e57f63.json  query-bebd032ddc3d98f1b6170c8a3954ab1a5e078e957b155ade0ccfa5904ed15c4f.json  query-cfeffc3db23c8c33d3c6d0820c5619ff7669b7a334c77932e716a83bd1bbc882.json  query-d45c349496e50afa48543e06065fc2f317d85361d32433e3d16b15cd27879762.json  query-d7b294abd7071d6ba413cc0eae7a89031073346af8fc4a4b7339ca22297cd07c.json  query-e04f4fe4b43e64729771fa0009d43af5a2b5cfb8715982e21ca50ec633797f8d.json  query-e505f28cdb8696f45163a369f892b5d5f0374be05329bb67096a821230478a39.json  query-fd4a0e8eaf8b600c43cd14bb42366e66d0fcee05a0baecd7ddea8d2ed5c4a6b7.json
docs/: api_documentation.md  create_user.md  database_management.md  deployment.md  development.md  env_vars.md  using_mocked_route.md
migrations/: 0000_base_procedures.sql  0000_initial.down.sql  0000_initial.up.sql  0001_app_versions.sql  0001_app_versions_table.down.sql  0001_app_versions_table.up.sql  0002_advertisements_table.down.sql  0002_advertisements_table.up.sql  0002_notifications_table.down.sql  0002_notifications_table.up.sql  0003_user_identities_table.down.sql  0003_user_identities_table.up.sql  0004_crash_reports.down.sql  0004_crash_reports.up.sql  0005_flags.down.sql  0005_flags.up.sql  0006_users.down.sql  0006_users.up.sql
public/: humans.txt  robots.txt
src/: auth.rs  bus_stops.rs  cors.rs  (+7 more)
(+114 files in other folders)
