[package]
name = "burrito-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
tokio = "1.39.3"
serde = "1.0.202"
serde_json = "1.0.117"
geojson = "0.24.1"
geo = "0.28.0"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["native-tls-vendored"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
strum_macros = "0.26.4"
strum = "0.26.3"

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
shuttle = []
