[package]
name = "burrito-server"
description = "The Burrito API is the backbone of all the Contigo Burrito services, from app features to bus driver tracking."
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
tokio = "1.41.1"
serde = "1.0.214"
serde_json = "1.0.132"
geojson = "0.24.1"
geo = "0.29.1"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["native-tls-vendored", "multipart"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "ipnetwork"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
strum_macros = "0.26.4"
strum = "0.26.3"
ws = { package = "rocket_ws", version = "0.1.1" }
include-bytes-plus = "1.1.0"
hex = "0.4.3"
sha1 = "0.10.6"
oxipng = "9.1.2"
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
utoipa = { version = "5.2.0", features = ["macros", "rocket_extras", "chrono"]}
utoipa-scalar = { version = "0.2.0", features = ["rocket"]}
thiserror = "2.0.1"

[dependencies.image]
version = "0.25.5"
features = ["png", "jpeg", "rayon"]
default-features = false

[profile.dev.package.sqlx-macros]
opt-level = 3
